--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID=AKIAXRWCPEBEQEV5YK6D
-AWS_SECRET_ACCESS_KEY=fe/Ow/fKX2hmKpCHbNgqktb2XQO9btDlqRMpXvFR
+AWS_ACCESS_KEY_ID=xxxx
+AWS_SECRET_ACCESS_KEY=xxxx
 
 EVENT_BUS=cardtokenization
